# conan-xcode

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  regenerate.sh
src/: alpha.cpp  alpha.h  main.cpp  server.cpp  server.hpp
test_package/: conanfile.py
